Fix edge case with attachment overflow

--- a/styles/index.css
+++ b/styles/index.css
@@ -218,6 +218,7 @@ body {
   box-shadow: 0px -1px 4px 0px #c0c0c051;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
+  overflow-y: auto;
 }
 
 @media only screen and (max-width: 600px) {
